Added consulting services; Removed resources

--- a/about.html
+++ b/about.html
@@ -72,12 +72,11 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/consulting.html">
+                                Consulting Services
+                            </a>
                         </div>
                     </div>
-
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
-                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link is-active" href="#">
@@ -94,9 +93,6 @@
                             <hr class="navbar-divider">
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/privacy.html">
                                 Privacy Policy
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
-                                Affiliate Disclosure
                             </a>
                         </div>
                     </div>
@@ -133,16 +129,16 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a technology company that strives to glorify God through the creation and distribution of quality software applications. We seek to aid any organization, small or large, that needs and desires mobile app development and/or website development. We aim to make these services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
+                    Kingdom Application Solutions is a technology company that strives to glorify God through the creation and distribution of quality software applications and providing website and IT consulting services. We seek to aid any organization, small or large, that needs and desires mobile app development, website development, website consulting, and/or IT consulting services. We aim to make these services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
 
-                    Our goal is to provide quality custom mobile apps and custom website development to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store. Our websites are hosted on a fast server with little to no downtime.
+                    Our goal is to provide quality custom mobile apps and custom website development to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store. Our websites are hosted on a fast server with little to no downtime. We seek to help you along in developing or optimizing your own website through our website consulting services. Our IT consulting services can aid in any of your general IT-related issues such as security, hardware, or software selections.
                 </h2><br>
                 <h1 class="title">
                     Our Founder
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality custom mobile apps and developing custom user-friendly websites all for the glory of God!
+                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am a graduate with a degree in information technology and am passionate about designing quality custom mobile apps, developing custom user-friendly websites, and providing website and IT consulting services all for the glory of God!
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column is-half">
