--- a/contact.html
+++ b/contact.html
@@ -72,12 +72,11 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/consulting.html">
+                                Consulting Services
+                            </a>
                         </div>
                     </div>
-
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
-                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link" href="#">
@@ -94,9 +93,6 @@
                             <hr class="navbar-divider">
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/privacy.html">
                                 Privacy Policy
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
-                                Affiliate Disclosure
                             </a>
                         </div>
                     </div>
@@ -119,7 +115,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Contact Kingdom Application Solutions LLC
+                        Contact Kingdom Application Solutions
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -133,7 +129,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    We are excited to hear from you and how we can work with you to aid in your mobile app development or website development needs! Please fill out the contact form below and we will get back with you as soon as we can! <br><br> Alternatively, simply click the button below to schedule a virtual meeting now!
+                    We are excited to hear from you and how we can work with you to aid in your mobile app development, website development, website consulting, or IT consulting service needs! Please fill out the contact form below and we will get back with you as soon as we can! <br><br> Alternatively, simply click the button below to schedule a virtual meeting now!
                 </h2>
                 <div class="buttons">
                     <a class="button calendly-button" href="https://calendly.com/kingdomappsolutions/consultation" target="_blank">Schedule a Call With Us!</a>
@@ -166,10 +162,11 @@
                                     </option>
                                     <option>Website Development
                                     </option>
+                                    <option>Website Consulting Services</option>
+                                    <option>IT Consulting Services</option>
                                     <option>Custom Software</option>
                                     <option>Pricing Question(s)</option>
                                     <option>Privacy Policy Question(s)</option>
-                                    <option>Affiliate Disclosure Question(s)</option>
                                 </select>
                             </div>
                         </div>
