--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/consulting.html">
+                                Consulting Services
+                            </a>
                         </div>
                     </div>
-
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
-                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link" href="#">
@@ -94,9 +93,6 @@
                             <hr class="navbar-divider">
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/privacy.html">
                                 Privacy Policy
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
-                                Affiliate Disclosure
                             </a>
                         </div>
                     </div>
@@ -124,7 +120,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Mobile App Development and Website Development
+                        Mobile App Development, Website Development, and Website & IT Consulting
                     </h1>
                 </div>    
             </div>     
@@ -138,7 +134,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle justify">
-                            We are a technology company that strives to glorify God through the creation and distribution of quality mobile apps and websites. Our primary focus is churches, ministries, missionaries, and religious non-profit organizations but work with organizations of all sizes. 
+                            We are a technology company that strives to glorify God through the creation and distribution of mobile apps and websites and providing website and IT consulting services. Our primary focus is churches, ministries, missionaries, and religious non-profit organizations but work with organizations of all sizes. 
                         </h4>
                         <h4 class="subtitle">
                             Our core values are:
@@ -209,6 +205,56 @@
                             <source srcset="./images/websites.webp" type="images/webp">
                             <source srcset="./images/websites.png" type="images/png">
                             <img class="image-home" src="./images/websites.webp" alt="Website development" width="640" height="480">
+                        </picture>
+                    </div>
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <picture>
+                            <source srcset="./images/web-consulting.webp" type="images/webp">
+                            <source srcset="./images/web-consulting.png" type="images/png">
+                            <img src="./images/web-consulting.webp" alt="Mobile app development" width="640" height="480">
+                        </picture>
+                    </div>
+                    <div class="column">
+                        <h2 class="subtitle privacy-h3">
+                            Website Consulting Services
+                        </h2>
+                        <h4 class="subtitle justify">
+                            We offer website consulting services to organizations of all sizes but focus more on churches, ministries, or religious non-profit organizations. Our website consulting services include SEO consulting, getting started with content management systems, analyzing your website for optimization, teaching more advanced design techniques, providing custom HTML or JavaScript add-ins to your existing website, aiding in web design, and helping with social media marketing. Contact us for an analysis of your project and how we can help make it a reality!
+                        </h4>
+                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/consulting.html">
+                        <b>About Website Consulting Services</b>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <h2 class="subtitle privacy-h3">
+                            IT Consulting Services
+                        </h2>
+                        <h4 class="subtitle justify">
+                            We offer general IT consulting services primarily to churches, ministries, missionaries/church planters, or religious non-profit organizations needing IT services. Along with churches, we also cater to small businesses and organizations of any size. We offer the installation and setup of new hardware and software, the repair of computers and certain computer peripherals, an analysis of your network and how to better ensure security for your system, and simple help for your IT-related questions.
+                        </h4>
+                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/consulting.html">
+                            <b>About IT Consulting Services</b>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <picture>
+                            <source srcset="./images/it-consulting.webp" type="images/webp">
+                            <source srcset="./images/it-consulting.png" type="images/png">
+                            <img class="image-home" src="./images/it-consulting.webp" alt="Website development" width="640" height="480">
                         </picture>
                     </div>
                 </div>
