--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -72,12 +72,11 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/consulting.html">
+                                Consulting Services
+                            </a>
                         </div>
                     </div>
-
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
-                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link is-active" href="#">
@@ -93,9 +92,6 @@
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/privacy.html">
                                 Privacy Policy
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
-                                Affiliate Disclosure
                             </a>
                         </div>
                     </div>
@@ -118,7 +114,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        The Mission, Vision, and Values of Kingdom Application Solutions LLC
+                        The Mission, Vision, and Values of Kingdom Application Solutions
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -136,21 +132,21 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality custom mobile apps and custom website design & development.
+                    Kingdom Application Solutions exists to glorify God through the creation and distribution of quality custom mobile apps, custom website design & development, and providing website consulting services and IT consulting services.
                 </h2><br><hr>
                 <h1 class="title">
                     Our Vision
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its products and services. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in communicating with their congregations better and reach people with the love of Christ. We further envision aiding small businesses and organizations better reach their clients and increase their profit margins through well-made, designed, and developed mobile apps and websites.
+                    Kingdom Application Solutions envisions a global impact from its products and services. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in communicating with their congregations better and reach people with the love of Christ. We further envision aiding small businesses and organizations to better reach their clients and increase their profit margins through well-made, designed, and developed mobile apps and websites and/or through the use of website consulting or IT consulting services.
                 </h2><br><hr>
                 <h1 class="title">
                     Our Values
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC has three main core values:
+                    Kingdom Application Solutions has three main core values:
                 </h2>
                 <div class="columns">
                     <div class="column">
