--- a/privacy.html
+++ b/privacy.html
@@ -72,12 +72,11 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/consulting.html">
+                                Consulting Services
+                            </a>
                         </div>
                     </div>
-
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
-                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link is-active" href="#">
@@ -94,9 +93,6 @@
                             <hr class="navbar-divider">
                             <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/privacy.html">
                                 Privacy Policy
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
-                                Affiliate Disclosure
                             </a>
                         </div>
                     </div>
