--- a/services.html
+++ b/services.html
@@ -72,12 +72,11 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/consulting.html">
+                                Consulting Services
+                            </a>
                         </div>
                     </div>
-
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
-                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link" href="#">
@@ -133,7 +132,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer two main services at Kingdom Application Solutions LLC: mobile app development and website design and development primarily for churches, ministries, missionaries, and religious non-profit organizations as well as for small businesses and other organizations. Each of these services has the goal of glorifying God through their creation. Read more about each service below. 
+                    Presently, we offer four main services at Kingdom Application Solutions: mobile app development, website design and development, web consulting, and general IT consulting primarily for churches, ministries, missionaries, and religious non-profit organizations as well as for small businesses and other organizations. Each of these services has the goal of glorifying God through their creation. Read more about each service below. 
                 </h2>
             </div>
         </section>
@@ -153,7 +152,7 @@
                             Mobile App Development
                         </h2>
                         <h4 class="subtitle justify">
-                            Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to many different types of organizations. <br><br> Specifically, a hybrid mobile app for your church or ministry can allow for your church or ministry to communicate with your congregation, ministry target area, or mission field. A mobile app can also allow for your business or organization to better reach your customers with your products and services. Often mobile app development costs tens of thousands of dollars for development plus monthly maintenance fees. These high prices often make mobile apps unavailable to churches, ministries, or small businesses. <br><br> Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps by offering much better quality apps, no upfront costs, unlimited updates, and a more custom feel for the app that fits your specific location and needs.
+                            Mobile app development is one of the chief services offered by Kingdom Application Solutions. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to many different types of organizations. <br><br> Specifically, a hybrid mobile app for your church or ministry can allow for your church or ministry to communicate with your congregation, ministry target area, or mission field. A mobile app can also allow for your business or organization to better reach your customers with your products and services. Often mobile app development costs tens of thousands of dollars for development plus monthly maintenance fees. These high prices often make mobile apps unavailable to churches, ministries, or small businesses. <br><br> Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps by offering much better quality apps, no upfront costs, unlimited updates, and a more custom feel for the app that fits your specific location and needs.
                         </h4>
                         <a class="button info-button-brick" href="https://kingdomappsolutions.tech/mobile-app-development.html">
                         <b>Mobile App Development Pricing</b>
@@ -171,7 +170,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle justify">
-                            Website design & development is one of the foundational services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out your church, mission, religious non-profit organization, or small business so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for a ministry's web presence. A well-made website illustrates to others that you do things with excellence and builds confidence in your organization. <br><br>
+                            Website design & development is one of the foundational services Kingdom Application Solutions offers. A website is the first place people will visit when checking out your church, mission, religious non-profit organization, or small business so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for a ministry's web presence. A well-made website illustrates to others that you do things with excellence and builds confidence in your organization. <br><br>
 
                             A custom website for your church, ministry, mission, religious non-profit organization, or business can enable you to effectively communicate with your congregation, ministry target area, mission field, donors, or customers. We offer a robust, website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization or click the button to learn more about our pricing packages.
                         </h4>
@@ -188,61 +187,57 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section><hr>
 
-                <!-- <div class="columns is-centered">
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-mobile-screen"></i>&nbsp;
-                                    App Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content justify">
-                                    We offer both progressive web apps (PWAs) and hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring quality mobile app development to your ministry at an affordable price.
-                                    <br><br>
-                                    Click the link to see more information about pricing for our <u><a href="https://kingdomappsolutions.tech/apps.html">PWA and hybrid mobile app development</a></u>. <br><br><br>
-                                </div>
-                            </div>                  
-                        </div>
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <picture>
+                            <source srcset="./images/web-consulting.webp" type="images/webp">
+                            <source srcset="./images/web-consulting.png" type="images/png">
+                            <img src="./images/web-consulting.webp" alt="Mobile apps" width="640" height="480">
+                        </picture>
                     </div>
-
                     <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop"></i>&nbsp;
-                                    Website Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content justify">
-                                    We offer the design and development of custom websites for churches, ministries, missionaries, and religious non-profit organizations. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-compass-drafting"></i>&nbsp;
-                                    Graphic Design
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content justify">
-                                    We provide a wide range of graphic design options including logo design, printable graphics, and social media graphics. Quality graphic work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! <br><br>Custom graphic design can enable you to effectively communicate, give out information, and connect with others.  Click the link for information about our custom <u><a href="https://kingdomappsolutions.tech/graphic-design.html">graphic design</a></u> work.<br>
-                                </div>
-                            </div>
-                        </div>
+                        <h2 class="subtitle privacy-h3">
+                            Website Consulting Services
+                        </h2>
+                        <h4 class="subtitle justify">
+                            Website consulting services is one of the primary services offered by Kingdom Application Solutions. Whether you’re building a new website or looking to improve performance, we can help support you with a range of tailored services. Our website consulting services include SEO consulting, getting started with content management systems, teaching more advanced design techniques, providing custom HTML or JavaScript add-ins to your existing website, and helping with social media marketing. <br><br> Web consulting the the process of setting digital marketing goals, developing a strategic plan to achieve those goals, and following out the plan to increase revenue. It’s doing what’s required to fix your website, but also looking forward to help business owners plan for the future. Kingdom Application Solutions is here to help in all of your website consulting needs.
+                        </h4>
+                        <a class="button info-button-brick" href="https://kingdomappsolutions.tech/consulting.html">
+                        <b>Website Consulting Services Pricing</b>
+                        </a>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section><hr>
+
+        <section class="hero section-padding">
+            <div class="hero-body">
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <h2 class="subtitle privacy-h3">
+                            IT Consulting Services
+                        </h2>
+                        <h4 class="subtitle justify">
+                            General IT consulting services is one of the main services Kingdom Application Solutions offers. We offer the installation and setup of new hardware and software, the repair of computers and certain computer peripherals, an analysis of your network and how to better ensure security for your system, and simple help for your IT-related questions. Assistance with strategic IT planning is one of our most popular services. We think of strategic IT as a core competitive strength, helping you to invest in the right technologies to prepare your organization today for tomorrow’s challenges. <br><br> As your organization relies more heavily on technology, the inherent risks increase as well. A single data breach or ransomware attack can cause huge financial, legal, and reputational damages. We offer an assessment of your systems and offer a plan to mitigate against threats. Kingdom Application Solutions wants to aid you in all of your IT-related needs!
+                        </h4>
+                        <a class="button info-button-blue" href="https://kingdomappsolutions.tech/consulting.html">
+                            <b>IT Consulting Services Pricing</b>
+                        </a>
+                    </div><br>
+                    <div class="column">
+                        <picture>
+                            <source srcset="./images/it-consulting.webp" type="images/webp">
+                            <source srcset="./images/it-consulting.png" type="images/png">
+                            <img class="image-home" src="./images/it-consulting.webp" alt="Website development" width="640" height="480">
+                        </picture>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <footer class="myfooter">
             <div class="content has-text-centered">
