--- a/website-development.html
+++ b/website-development.html
@@ -72,12 +72,11 @@
                             <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/consulting.html">
+                                Consulting Services
+                            </a>
                         </div>
                     </div>
-
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
-                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link" href="#">
@@ -133,7 +132,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Website design & development is one of the foundational services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out your church, mission, religious non-profit organization, or business so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for your web presence. A well-made website illustrates to others that you do things with excellence and builds confidence in your organization. <br><br> Below you can see our pricing plans for churches, missionaries, and non-profit/business organizations. Contact us on our contact page to get more information regarding pricing or custom built websites.
+                    Website design & development is one of the foundational services Kingdom Application Solutions offers. A website is the first place people will visit when checking out your church, mission, religious non-profit organization, or business so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for your web presence. A well-made website illustrates to others that you do things with excellence and builds confidence in your organization. <br><br> Below you can see our pricing plans for churches, missionaries, and non-profit/business organizations. Contact us on our contact page to get more information regarding pricing or custom built websites.
                 </h2><hr>
                 <h1 class="title">
                     Pricing
