--- a/consulting.html
+++ b/consulting.html
@@ -52,7 +52,7 @@
                         Home
                     </a>
 
-                    <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/services.html">
+                    <a class="navbar-item" href="https://kingdomappsolutions.tech/services.html">
                         Services
                     </a>
 
