--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -52,7 +52,7 @@
                         Home
                     </a>
 
-                    <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/services.html">
+                    <a class="navbar-item" href="https://kingdomappsolutions.tech/services.html">
                         Services
                     </a>
 
